--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "errors/native",
+    "type": "metapackage",
     "description": "A meta-package that indicates a requirement for native error handling.",
     "keywords": ["error", "errors", "handler", "native"],
     "homepage": "https://github.com/php-errors/native",
